jilles      2006/07/08 23:23:03 UTC	(20060708-5794)
  Log:
  Rerun autoconf and autoheader.
  

  Changes:	Modified:
  +9 -43	trunk/configure (File Modified) 
  +0 -3		trunk/include/sysconf.h.in (File Modified) 


jilles      2006/07/08 23:22:24 UTC	(20060708-5792)
  Log:
  Remove --enable-sasl configure option and related #define,
  there is no issue with always building sasl support.
  

  Changes:	Modified:
  +11 -35	trunk/configure.ac (File Modified) 
  +1 -4		trunk/include/atheme.h (File Modified) 
  +1 -1		trunk/modules/Makefile.in (File Modified) 
  +0 -2		trunk/protocol/charybdis.c (File Modified) 


jilles      2006/07/08 23:03:39 UTC	(20060708-5790)
  Log:
  cs_kickdots: add a header comment with copyright notice and short description
  

  Changes:	Modified:
  +9 -0		trunk/contrib/cs_kickdots.c (File Modified) 


jilles      2006/07/08 22:44:15 UTC	(20060708-5786)
  Log:
  Remove SASL question from ./setup. There is no problem
  with building this all the time.
  

  Changes:	Modified:
  +0 -33	trunk/setup (File Modified) 


jilles      2006/07/08 22:30:03 UTC	(20060708-5784)
  Log:
  Mention FANTASY in /cs help set.
  

  Changes:	Modified:
  +1 -0		trunk/modules/chanserv/help.c (File Modified) 


jilles      2006/07/08 21:18:46 UTC	(20060708-5782)
  Log:
  All Makefile.in:
  - Make sysconfdir = line properly aligned by removing a tab
  - Remove useless VERSION = 0.1 lines
  

  Changes:	Modified:
  +1 -1		trunk/Makefile.in (File Modified) 
  +1 -3		trunk/backend/Makefile.in (File Modified) 
  +1 -3		trunk/contrib/Makefile.in (File Modified) 
  +1 -3		trunk/crypto/Makefile.in (File Modified) 
  +1 -1		trunk/libatheme/Makefile.in (File Modified) 
  +1 -3		trunk/modules/Makefile.in (File Modified) 
  +1 -3		trunk/modules/chanserv/Makefile.in (File Modified) 
  +1 -3		trunk/modules/global/Makefile.in (File Modified) 
  +1 -3		trunk/modules/helpserv/Makefile.in (File Modified) 
  +1 -3		trunk/modules/memoserv/Makefile.in (File Modified) 