@@ -1,3 +1,14 @@
+jilles      2006/07/09 00:04:07 UTC	(20060709-5796)
+  Log:
+  Remove the old modules/saslserv/sasl.so and
+  modules/saslserv/help.so on make install,
+  loading them causes trouble.
+  
+
+  Changes:	Modified:
+  +2 -0		trunk/modules/saslserv/Makefile.in (File Modified) 
+
+
 jilles      2006/07/08 23:23:03 UTC	(20060708-5794)
   Log:
   Rerun autoconf and autoheader.
